# differentiable-wdfs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
modules/: CMakeLists.txt
modules/toms917/: toms917.cpp  toms917.hpp
plugin/: CMakeLists.txt
plugin/bench/: CMakeLists.txt  diode_clipper_bench.cpp
plugin/res/: CMakeLists.txt
plugin/src/: CMakeLists.txt  DifferentiableWDFPlugin.cpp  DifferentiableWDFPlugin.h  pch.h
plugin/src/dsp/: CircuitModel.h
plugin/src/dsp/diode_clipper/: DiodeClipper.cpp  DiodeClipper.h  DiodeClipperWDF.cpp  DiodeClipperWDF.h  DiodePairNeuralModel.h  HPFDiodeClipper.cpp  HPFDiodeClipper.h  MultiDiodeClipper.cpp  MultiDiodeClipper.h  Toms917DiodePair.h
plugin/src/dsp/tube_screamer/: TubeScreamer.cpp  TubeScreamer.h
plugin/src/gui/: CPUMeter.h  CircuitModelGUI.cpp  CircuitModelGUI.h  PluginEditor.cpp  PluginEditor.h
test_data/: clipper_pot_r.csv  clipper_pot_x.csv  clipper_pot_y.csv  clipper_x.csv  clipper_y.csv
wdf_cpp/: wdf-clipper-pot.cpp  wdf-clipper.cpp
wdf_py/: clipper.json  clipper.py  clipper_pot.py  diodeR_test.py  diodeR_test_model.json  diode_pretraining.py  diode_test.py  lpf.py  model_utils.py  tf_wdf.py  tf_wdf_z.py  voltage_divider.py
wdf_py/diode_circuits/: clipper_pot.py  diode_pretraining.py
wdf_py/diode_circuits/models/pretrained/: 1N4148_2x16_pretrained_model.json  1N4148_2x4_pretrained_model.json  1N4148_2x8_pretrained_model.json  1N4148_4x4_pretrained_model.json  1N4148_4x8_pretrained_model.json
wdf_py/diode_clipper/: clipper_pot.py  clipper_pot_hpf.py  clipper_pot_iter.py  diode_config.py  diode_pretraining.py  plot_history.py  plot_history_iter.py  plot_transconductance.py
wdf_py/diode_clipper/models/: 1N4148 (1U-1D)_2x16_training_10.json  1N4148 (1U-1D)_2x16_training_1_hpf.json  1N4148 (1U-1D)_2x16_training_2.json  1N4148 (1U-1D)_2x16_training_2000.json  1N4148 (1U-1D)_2x16_training_3.json  1N4148 (1U-1D)_2x4_training_1.json  1N4148 (1U-1D)_2x4_training_2.json  1N4148 (1U-1D)_2x4_training_3.json  1N4148 (1U-1D)_2x8_training_1.json  1N4148 (1U-1D)_2x8_training_2.json  1N4148 (1U-1D)_2x8_training_3.json  1N4148 (1U-1D)_2x8_training_8_500.json  1N4148 (1U-1D)_4x4_training_1.json  1N4148 (1U-1D)_4x4_training_2.json  1N4148 (1U-1D)_4x4_training_4.json  1N4148 (1U-1D)_4x8_training_1.json  1N4148 (1U-1D)_4x8_training_5.json  1N4148 (1U-1D)_4x8_training_500.json  1N4148 (1U-2D)_2x16_training_2.json  1N4148 (1U-2D)_2x8_training_1.json  1N4148 (1U-3D)_2x16_training_2.json  1N4148 (1U-3D)_2x8_training_3.json  1N4148 (2U-2D)_2x16_training_500.json  1N4148 (2U-2D)_2x8_training_1.json  1N4148 (2U-2D)_2x8_training_10.json  1N4148 (2U-2D)_2x8_training_11.json  1N4148 (2U-2D)_2x8_training_12.json  1N4148 (2U-2D)_2x8_training_13.json  1N4148 (2U-2D)_2x8_training_14.json  1N4148 (2U-2D)_2x8_training_15.json  1N4148 (2U-2D)_2x8_training_16.json  1N4148 (2U-2D)_2x8_training_17.json  1N4148 (2U-2D)_2x8_training_18.json  1N4148 (2U-2D)_2x8_training_2.json  1N4148 (2U-2D)_2x8_training_3.json  1N4148 (2U-2D)_2x8_training_4.json  1N4148 (2U-2D)_2x8_training_5.json  1N4148 (2U-2D)_2x8_training_6.json  1N4148 (2U-2D)_2x8_training_7.json  1N4148 (2U-2D)_2x8_training_8.json  (+9 more)
wdf_py/diode_clipper/models/pretrained/: 1N4148 (1U-1D)_2x8_pretrained_model.json  1N4148 (1U-2D)_2x16_pretrained_model.json  1N4148 (1U-2D)_2x8_pretrained_model.json  1N4148 (1U-3D)_2x16_pretrained_model.json  1N4148 (1U-3D)_2x8_pretrained_model.json  1N4148 (2U-2D)_2x16_pretrained_model.json  1N4148 (2U-2D)_2x8_pretrained_model.json  1N4148 (2U-3D)_2x16_pretrained_model.json  1N4148 (2U-3D)_2x8_pretrained_model.json  1N4148 (3U-3D)_2x16_pretrained_model.json  1N4148 (3U-3D)_2x8_pretrained_model.json  1N4148_2x16_pretrained_model.json  1N4148_2x4_pretrained_model.json  1N4148_2x8_pretrained_model.json  1N4148_4x4_pretrained_model.json  1N4148_4x8_pretrained_model.json
wdf_py/diode_clipper/plots/: .gitignore
wdf_py/lib/: dataimport.py  layers.py  model_utils.py  tf_wdf.py
wdf_py/models/: 1N4148_clipper_pot.json  1N4148_pretrained_model.json  DefaultDiode_pretrained_model.json  diodeR_test_model.json
wdf_py/old/: clipper.py  diode_test.py
wdf_py/simple_circuits/: lpf.py  voltage_divider.py
wdf_py/transistors/: big_muff.py  common_emitter.py
